--- a/.htaccess
+++ b/.htaccess
@@ -15,3 +15,5 @@ RewriteRule (.*) /web/$1
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule . /web/index.php
+
+php_value date.timezone "Europe/Minsk"
