--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@ tests/_support/_generated
 /.vagrant
 
 #images
-web/images/module2/new/
-web/images/module3/new/
+#web/images/module2/new/
+#web/images/module3/new/
